<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_margin="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="22dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/create_a_new_account"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="38dp"
                    android:background="@drawable/img_edt_blue"
                    android:hint="@string/Name"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/img_edt_blue"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edt_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/img_edt_blue"
                    android:hint="@string/Phone"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edt_Pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/img_edt_blue"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/img_edt_blue"
                    android:hint="@string/ConfirmPassword"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/edt_customertype"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/img_edt_blue"
                    android:focusable="false"
                    android:hint="@string/customer_type"
                    android:padding="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/edtLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/img_edt_blue"
                    android:focusable="false"
                    android:hint="@string/select_language"
                    android:padding="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="14dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/Forgotpwd"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_Register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_green"
                    android:padding="12dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_SignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text="@string/AlreadyHaveAccount"
                        android:textColor="@color/colorWhite" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>


</LinearLayout>