<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="160dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/forgot_password"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:textColor="@color/colorWhite"
                android:text="@string/we_just_need_your_registered_email_address"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:text="@string/to_send_you_password_reset"/>
            <EditText
                android:id="@+id/edt_Email_ForgotPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Email"
                android:layout_marginTop="38dp"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="14dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@drawable/img_edt_blue"/>


            <Button
                android:id="@+id/btn_reset_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_green"
                android:padding="12dp"
                android:layout_marginTop="22dp"
                android:textColor="@color/colorWhite"
                android:text="@string/reset_password"/>

            <TextView
                android:id="@+id/txt_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/don_t_you_have_an_account_sign_up"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>