<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="160dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"
                    android:orientation="vertical">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/sign_in_to_your_account"
                        android:textColor="@color/colorWhite"
                        android:textSize="22dp" />

                    <EditText
                        android:id="@+id/edt_Email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="38dp"
                        android:background="@drawable/img_edt_blue"
                        android:hint="@string/Email"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/edt_Pwd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/img_edt_blue"
                        android:hint="@string/Password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txt_forgot_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/Forgotpwd"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/btn_SignIn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_green"
                        android:padding="12dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"/>

                    <LinearLayout
                        android:id="@+id/linearFB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"

                        android:background="@drawable/btn_facebook">
                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/img_fb"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_fb"
                            app:civ_border_color="@color/colorWhite"
                            app:civ_border_width="1dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorWhite"
                            android:layout_marginLeft="30dp"
                            android:text="@string/sign_in_with_facebook"/>
                    </LinearLayout>



                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                    <LinearLayout
                        android:id="@+id/lineargmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:background="@drawable/btn_google">
                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/img_gmail"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/ic_gmail"
                            app:civ_border_color="@color/colorWhite"
                            app:civ_border_width="1dp" />


                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorWhite"
                            android:layout_marginLeft="30dp"
                            android:text="@string/sign_in_with_gmail"/>
                    </LinearLayout>




                    <TextView
                        android:id="@+id/txt_SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:gravity="center"
                        android:text="@string/don_t_you_have_an_account_sign_up"
                        android:layout_marginBottom="30dp"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>