<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ThankyouActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="160dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/love_img"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorWhite"
                android:text="@string/thank_you"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:textColor="@color/colorWhite"
                android:text="@string/your_service_registered_successfully"/>




            <Button
                android:id="@+id/btn_back_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_green"
                android:padding="12dp"
                android:layout_marginTop="28dp"
                android:textColor="@color/colorWhite"
                android:text="@string/back_to_home_page"/>


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>